# 0xbf00.github.io

./: .gitignore  CNAME  README.md  about.html  about.markdown  atom.xml  deploy.sh  index.html  site.hs  ubrigens.cabal
assets/css/: default.css
assets/js/: image-comparison-slider.min.js  main.coffee  main.js
posts/: demystifying_app_cracking.html  demystifying_app_cracking.markdown  digital_ice.html  digital_ice.mdown  linking_a_microphone.html  linking_a_microphone.md  origins.html  origins.markdown  papers_january16.html  papers_january16.markdown  papers_september.html  papers_september.markdown  sandbox_coverage.html  sandbox_coverage.markdown  sandbox_initialisation_bypasses.html  sandbox_initialisation_bypasses.md  sandbox_tour.html  sandbox_tour.markdown  simbple.html  simbple.markdown
templates/: default.html  post-list.html  post.html
