name:                ubrigens
version:             0.1.0.0
homepage:            ubrigens.com
author:              Jakob Rieck
maintainer:          jakobrieck@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable ubrigens
  main-is:             site.hs
  build-depends:       base >=4.6, hakyll >=4.4
  default-language:    Haskell2010
